~ minor - fixed image squashing

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -244,6 +244,7 @@
 
     img {
         max-height: 300px;
+        width: initial;
         display: block;
         margin: auto;
     }
